<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/enemyImage"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/ContentEnemyImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/enemy1" />

    <Button
        android:id="@+id/fightButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="1dp"
        android:text="@string/FightButton"
        android:textAllCaps="true"
        app:layout_constraintEnd_toStartOf="@id/fleeButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enemyImage" />

    <Button
        android:id="@+id/fleeButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="1dp"
        android:text="@string/FleeButton"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/fightButton"
        app:layout_constraintTop_toBottomOf="@+id/enemyImage" />
</androidx.constraintlayout.widget.ConstraintLayout>