<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/cityImage"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/ContentCityImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/city" />

    <Button
        android:id="@+id/enterButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="1dp"
        android:text="@string/EnterButton"
        android:textAllCaps="true"
        app:layout_constraintEnd_toStartOf="@+id/continueButton2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cityImage" />

    <Button
        android:id="@+id/continueButton2"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="1dp"
        android:text="@string/ContinueButton"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/enterButton"
        app:layout_constraintTop_toBottomOf="@+id/cityImage" />
</androidx.constraintlayout.widget.ConstraintLayout>