<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/merchantImage"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/ContentMerchantImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/merchant" />

    <Button
        android:id="@+id/comerceButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="1dp"
        android:text="@string/CommerceButton"
        android:textAllCaps="true"
        app:layout_constraintEnd_toStartOf="@id/continueButton3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/merchantImage" />

    <Button
        android:id="@+id/continueButton3"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="1dp"
        android:text="@string/ContinueButton"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/comerceButton"
        app:layout_constraintTop_toBottomOf="@id/merchantImage" />
</androidx.constraintlayout.widget.ConstraintLayout>